--- a/index.html
+++ b/index.html
@@ -24,45 +24,47 @@
   </head>
   <body>
     <header class="main-header">
-      <a href="https://www.tbcacademy.ge">
-        <img
-          src="./img/logos/header-tbc-logo.svg"
-          alt="tbc-logo"
-          class="header-tbc-logo"
-        />
-      </a>
-      <nav class="main-nav">
-        <ul class="main-nav-list">
-          <li>
-            <a
-              class="main-nav-link"
-              href="https://www.tbcacademy.ge"
-              >მთავარი</a
-            >
-          </li>
-          <li>
-            <a
-              class="main-nav-link"
-              href="https://www.tbcacademy.ge/it-academy"
-              >TBC IT</a
-            >
-          </li>
-          <li>
-            <a
-              class="main-nav-link selected-link"
-              href="https://www.tbcacademy.ge/usaid"
-              >TBC x USAID</a
-            >
-          </li>
-          <li>
-            <a
-              class="main-nav-link"
-              href="https://www.tbcacademy.ge/risks-academy"
-              >რისკები</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <div class="header-container">
+        <a href="https://www.tbcacademy.ge">
+          <img
+            src="./img/logos/header-tbc-logo.svg"
+            alt="tbc-logo"
+            class="header-tbc-logo"
+          />
+        </a>
+        <nav class="main-nav">
+          <ul class="main-nav-list">
+            <li>
+              <a
+                class="main-nav-link"
+                href="https://www.tbcacademy.ge"
+                >მთავარი</a
+              >
+            </li>
+            <li>
+              <a
+                class="main-nav-link"
+                href="https://www.tbcacademy.ge/it-academy"
+                >TBC IT</a
+              >
+            </li>
+            <li>
+              <a
+                class="main-nav-link selected-link"
+                href="https://www.tbcacademy.ge/usaid"
+                >TBC x USAID</a
+              >
+            </li>
+            <li>
+              <a
+                class="main-nav-link"
+                href="https://www.tbcacademy.ge/risks-academy"
+                >რისკები</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section class="section-about">
