Create courses section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,184 @@
           >
         </div>
       </section>
+      <section class="section-courses">
+        <div class="container">
+          <h2 class="section-header">სასწავლო კურსები</h2>
+          <ul class="courses-list">
+            <li class="course-item">
+              <img
+                src="./img/course-img/course-ios.webp"
+                alt="course image"
+              />
+              <div class="course-information">
+                <h3 class="course-header">iOS Development</h3>
+                <p class="course-about">რეგისტრაცია დასრულებულია</p>
+                <a
+                  href="https://www.tbcacademy.ge/usaid/ios-development"
+                  class="course-detail-btn"
+                >
+                  <img
+                    src="./img/icons/right-arrow-icon.svg"
+                    alt="right arrow"
+                  /><span>კურსის დეტალები</span>
+                </a>
+              </div>
+            </li>
+            <li class="course-item">
+              <img
+                src="./img/course-img/course-react.webp"
+                alt="course image"
+              />
+              <div class="course-information">
+                <h3 class="course-header">React</h3>
+                <p class="course-about">რეგისტრაცია დასრულებულია</p>
+                <a
+                  href="https://www.tbcacademy.ge/usaid/react"
+                  class="course-detail-btn"
+                >
+                  <img
+                    src="./img/icons/right-arrow-icon.svg"
+                    alt="right arrow"
+                  /><span>კურსის დეტალები</span>
+                </a>
+              </div>
+            </li>
+            <li class="course-item">
+              <img
+                src="./img/course-img/course-python.webp"
+                alt="course image"
+              />
+              <div class="course-information">
+                <h3 class="course-header">Intro to Python</h3>
+                <p class="course-about">რეგისტრაცია დასრულებულია</p>
+                <a
+                  href="https://www.tbcacademy.ge/usaid/python-basic"
+                  class="course-detail-btn"
+                >
+                  <img
+                    src="./img/icons/right-arrow-icon.svg"
+                    alt="right arrow"
+                  /><span>კურსის დეტალები</span>
+                </a>
+              </div>
+            </li>
+            <li class="course-item">
+              <img
+                src="./img/course-img/course-advance-python.webp"
+                alt="course image"
+              />
+              <div class="course-information">
+                <h3 class="course-header">Advanced Python</h3>
+                <p class="course-about">რეგისტრაცია დასრულებულია</p>
+                <a
+                  href="https://www.tbcacademy.ge/usaid/python-advance"
+                  class="course-detail-btn"
+                >
+                  <img
+                    src="./img/icons/right-arrow-icon.svg"
+                    alt="right arrow"
+                  /><span>კურსის დეტალები</span>
+                </a>
+              </div>
+            </li>
+            <li class="course-item">
+              <img
+                src="./img/course-img/course-advanced-cybersecurity.webp"
+                alt="course image"
+              />
+              <div class="course-information">
+                <h3 class="course-header">Advanced Cybersecurity Course</h3>
+                <p class="course-about">რეგისტრაცია დასრულებულია</p>
+                <a
+                  href="https://www.tbcacademy.ge/usaid/information-security-advance"
+                  class="course-detail-btn"
+                >
+                  <img
+                    src="./img/icons/right-arrow-icon.svg"
+                    alt="right arrow"
+                  /><span>კურსის დეტალები</span>
+                </a>
+              </div>
+            </li>
+            <li class="course-item">
+              <img
+                src="./img/course-img/course-tot.webp"
+                alt="course image"
+              />
+              <div class="course-information">
+                <h3 class="course-header">ToT - Training of Trainers</h3>
+                <p class="course-about">რეგისტრაცია დასრულებულია</p>
+                <a
+                  href="https://www.tbcacademy.ge/usaid/training-of-trainers"
+                  class="course-detail-btn"
+                >
+                  <img
+                    src="./img/icons/right-arrow-icon.svg"
+                    alt="right arrow"
+                  /><span>კურსის დეტალები</span>
+                </a>
+              </div>
+            </li>
+            <li class="course-item">
+              <img
+                src="./img/course-img/course-blockchain.webp"
+                alt="course image"
+              />
+              <div class="course-information">
+                <h3 class="course-header">Blockchain</h3>
+                <p class="course-about">რეგისტრაცია დასრულებულია</p>
+                <a
+                  href="https://www.tbcacademy.ge/usaid/blockchain"
+                  class="course-detail-btn"
+                >
+                  <img
+                    src="./img/icons/right-arrow-icon.svg"
+                    alt="right arrow"
+                  /><span>კურსის დეტალები</span>
+                </a>
+              </div>
+            </li>
+            <li class="course-item">
+              <img
+                src="./img/course-img/course-devOps.webp"
+                alt="course image"
+              />
+              <div class="course-information">
+                <h3 class="course-header">DevOps</h3>
+                <p class="course-about">რეგისტრაცია დასრულებულია</p>
+                <a
+                  href="https://www.tbcacademy.ge/usaid/devops"
+                  class="course-detail-btn"
+                >
+                  <img
+                    src="./img/icons/right-arrow-icon.svg"
+                    alt="right arrow"
+                  /><span>კურსის დეტალები</span>
+                </a>
+              </div>
+            </li>
+            <li class="course-item">
+              <img
+                src="./img/course-img/course-information-security .webp"
+                alt="course image"
+              />
+              <div class="course-information">
+                <h3 class="course-header">Information Security Governance</h3>
+                <p class="course-about">რეგისტრაცია დასრულებულია</p>
+                <a
+                  href="https://www.tbcacademy.ge/usaid/information-security-basic"
+                  class="course-detail-btn"
+                >
+                  <img
+                    src="./img/icons/right-arrow-icon.svg"
+                    alt="right arrow"
+                  /><span>კურსის დეტალები</span>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
