Create partner section and also create slider in it

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="css/globals.css"
     />
+
     <link
       rel="icon"
       sizes="192x192"
@@ -265,6 +266,85 @@
           </ul>
         </div>
       </section>
+      <section class="section-project-partners">
+        <button
+          class="nav-btn left-arrow-btn"
+          id="prevBtn"
+        >
+          <img
+            src="./img/icons/left-arrow-icon.svg"
+            alt="left arrow"
+          />
+        </button>
+
+        <button
+          class="nav-btn right-arrow-btn"
+          id="nextBtn"
+        >
+          <img
+            class="right-arrow-svg"
+            src="./img/icons/right-arrow-short.svg"
+            alt="right arrow"
+          />
+        </button>
+
+        <div class="container">
+          <h2 class="section-header">პროექტის პარტნიორები</h2>
+
+          <div class="slider-container">
+            <div class="slider-item">
+              <img
+                src="./img/partner-img/partner-usaid.webp"
+                alt="Image 1"
+              />
+              <img
+                src="./img/partner-img/partner-space.webp"
+                alt="Image 1"
+              />
+              <img
+                src="./img/partner-img/partner-tinet.webp"
+                alt="Image 1"
+              />
+            </div>
+            <div class="slider-item">
+              <img
+                src="./img/partner-img/partner-tegeta.webp"
+                alt="Image 2"
+              />
+              <img
+                src="./img/partner-img/partner-spert.webp"
+                alt="Image 2"
+              />
+              <img
+                src="./img/partner-img/partner-tbc.webp"
+                alt="Image 2"
+              />
+            </div>
+            <div class="slider-item center-slider-item">
+              <img
+                src="./img/partner-img/partnet-ufc.webp"
+                alt="Image 3"
+              />
+            </div>
+
+            <div class="nav-bar">
+              <button
+                class="nav-btn slider-circle"
+                id="page1Btn"
+              ></button>
+              <button
+                class="nav-btn slider-circle"
+                id="page2Btn"
+              ></button>
+              <button
+                class="nav-btn slider-circle"
+                id="page3Btn"
+              ></button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
