--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             თიბისისა და მის პარტნიორ კომპანიებში.
           </p>
           <a
-            class="about-btn"
+            class="blue-btn"
             href="https://www.tbcacademy.ge/usaid-about"
             >გაიგე მეტი</a
           >
@@ -344,7 +344,134 @@
           </div>
         </div>
       </section>
+      <section class="section-asked-question">
+        <div class="asked-question-container">
+          <div class="question-header-container">
+            <h2 class="section-header">ხშირად დასმული კითხვები</h2>
+            <a
+              class="blue-btn"
+              href="https://www.tbcacademy.ge/usaid-faq"
+              >ყველა კითხვა</a
+            >
+          </div>
+          <ul class="question-list">
+            <li
+              class="question-item"
+              id="question1"
+            >
+              <div class="question-container">
+                <p class="question">როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</p>
+                <img
+                  src="./img/icons/down-arrow-icon.svg"
+                  alt="see more btn"
+                />
+              </div>
+
+              <div
+                id="answer1"
+                class="asked-question-answer"
+              >
+                <p class="answer">
+                  <span>კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი: <br /></span>
+                  <span class="answer-steps"
+                    >I ეტაპი - პირველ ეტაპზე საჭიროა, შეავსო სასურველი კურსისთვის განკუთვნილი სარეგისტრაციო ფორმა, რომელიც განთავსებულია კურსის შიდა
+                    გვერდზე. კურსზე რეგისტრაციის დასრულების შემდეგ დაიწყება შემოსული განცხადებების გადარჩევა.
+                    <br />
+                    II ეტაპი - შერჩევის მეორე ეტაპი კურსების მიხედვით განსხვავებულია, ზოგიერთი კურსისთვის მოიცავს პრე-ტესტს, ზოგიერთ კურსზე კი
+                    უნარების ტესტს, სადაც მინიმალური ზღვარის გადალახვის შემთხვევაში გადახვალ შერჩევის შემდეგ ეტაპზე.
+                    <br />
+                    III ეტაპი - მესამე ეტაპი კურსების მიხედვით განსხვავდება: Advance კურსებზე, სადაც მოითხოვება გარკვეული ტექნიკური ცოდნა,
+                    მონაწილეებმა უნდა დაწერონ ტექნიკური ტესტი ცოდნის დონის შესამოწმებლად, ხოლო კურსებზე, სადაც რაიმე ტიპის წინასწარი ცოდნა მოთხოვნილი
+                    არ არის უნდა შეასრულოთ ტექნიკური დავალება, რაც თქვენი კვლევისა და თვითსწავლის უნარს ამოწმებს.
+                    <br />
+                    IV ეტაპი - შერჩევის ბოლო მეოთხე ეტაპი მოიცავს გასაუბრებას შესარჩევ კომისიასთან. გასაუბრების წარმატებით გავლის შემთხვევაში
+                    ჩაირიცხებით კურსზე და გაფორმდება შესაბამისი ხელშეკრულება. <br
+                  /></span>
+                  <span
+                    >* სანამ კურსზე დარეგისტრირდები მნიშვნელოვანია, ყურადღებით წაიკითხო კურსის აღწერა, ნახო რას ისწავლი კურსის განმავლობაში და გაიგო
+                    გააჩნია თუ არა კურსს დასწრების წინაპირობა.
+                  </span>
+                </p>
+              </div>
+            </li>
+            <li
+              class="question-item"
+              id="question2"
+            >
+              <div class="question-container">
+                <p class="question">შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</p>
+                <img
+                  src="./img/icons/down-arrow-icon.svg"
+                  alt="see more btn"
+                />
+              </div>
+              <div
+                id="answer2"
+                class="asked-question-answer"
+              >
+                <p class="answer">
+                  TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ კანდიდატს აქვს მხოლოდ ერთი კურსის გავლის შესაძლებლობა. გარდა Information
+                  Security და Python კურსებისა, სადაც Basic დონის გავლის შემდეგ შესაძლებელია სწავლის გაგრძელება Advance დონეზე.
+                </p>
+              </div>
+            </li>
+            <li
+              class="question-item"
+              id="question3"
+            >
+              <div class="question-container">
+                <p class="question">რა ღირს სწავლა პროგრამის ფარგლებში?</p>
+                <img
+                  src="./img/icons/down-arrow-icon.svg"
+                  alt="see more btn"
+                />
+              </div>
+              <div
+                id="answer3"
+                class="asked-question-answer"
+              >
+                <p class="answer">პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია თიბისი ბანკისა და USAID-ის მიერ.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container footer-container">
+        <img
+          src="./img/logos/tbc-logo.webp"
+          alt="tbc logo"
+        />
+        <div class="social-network">
+          <a
+            target="_blank"
+            href="https://www.facebook.com/tbcbank/"
+          >
+            <img
+              src="./img/icons/facebook-icon.webp"
+              alt="facebook icon"
+            />
+          </a>
+          <a
+            target="_blank"
+            href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ"
+          >
+            <img
+              src="./img/icons/youtube-icon.webp"
+              alt="youtube icon"
+            />
+          </a>
+        </div>
+        <span class="copyright-text">© 2023 ყველა უფლება დაცულია</span>
+        <span class="copyright-rules">წესები და პირობები</span>
+        <a
+          href="mailto:itacademy@tbcbank.com.ge"
+          class="send-email-btn"
+          >მოგვწერეთ</a
+        >
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
