Create mobile nav bar and also create responsive design (700px )

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             class="header-tbc-logo"
           />
         </a>
+
         <nav class="main-nav">
           <ul class="main-nav-list">
             <li>
@@ -65,8 +66,26 @@
             </li>
           </ul>
         </nav>
+
+        <button class="btn-mobile-nav">
+          <img
+            id="mobile-menu-btn"
+            class="icon-mobile-nav"
+            src="./img/icons/mobile-menu-icon.svg"
+            alt="menu btn"
+            name="menu-outline"
+          />
+          <img
+            id="mobile-close-btn"
+            class="icon-mobile-nav"
+            src="./img/icons/close-btn.svg"
+            alt="close btn"
+            name="close-outline"
+          />
+        </button>
       </div>
     </header>
+
     <main>
       <section class="section-about">
         <div class="background-img-container">
@@ -94,6 +113,7 @@
           <ul class="courses-list">
             <li class="course-item">
               <img
+                class="course-img"
                 src="./img/course-img/course-ios.webp"
                 alt="course image"
               />
@@ -113,6 +133,7 @@
             </li>
             <li class="course-item">
               <img
+                class="course-img"
                 src="./img/course-img/course-react.webp"
                 alt="course image"
               />
@@ -132,6 +153,7 @@
             </li>
             <li class="course-item">
               <img
+                class="course-img"
                 src="./img/course-img/course-python.webp"
                 alt="course image"
               />
@@ -151,6 +173,7 @@
             </li>
             <li class="course-item">
               <img
+                class="course-img"
                 src="./img/course-img/course-advance-python.webp"
                 alt="course image"
               />
@@ -170,6 +193,7 @@
             </li>
             <li class="course-item">
               <img
+                class="course-img"
                 src="./img/course-img/course-advanced-cybersecurity.webp"
                 alt="course image"
               />
@@ -189,6 +213,7 @@
             </li>
             <li class="course-item">
               <img
+                class="course-img"
                 src="./img/course-img/course-tot.webp"
                 alt="course image"
               />
@@ -208,6 +233,7 @@
             </li>
             <li class="course-item">
               <img
+                class="course-img"
                 src="./img/course-img/course-blockchain.webp"
                 alt="course image"
               />
@@ -227,6 +253,7 @@
             </li>
             <li class="course-item">
               <img
+                class="course-img"
                 src="./img/course-img/course-devOps.webp"
                 alt="course image"
               />
@@ -246,6 +273,7 @@
             </li>
             <li class="course-item">
               <img
+                class="course-img"
                 src="./img/course-img/course-information-security .webp"
                 alt="course image"
               />
