Create fully responsive design

--- a/index.html
+++ b/index.html
@@ -374,14 +374,13 @@
       </section>
       <section class="section-asked-question">
         <div class="asked-question-container">
-          <div class="question-header-container">
-            <h2 class="section-header">ხშირად დასმული კითხვები</h2>
-            <a
-              class="blue-btn"
-              href="https://www.tbcacademy.ge/usaid-faq"
-              >ყველა კითხვა</a
-            >
-          </div>
+          <h2 class="section-header">ხშირად დასმული კითხვები</h2>
+          <a
+            class="blue-btn all-question-btn"
+            href="https://www.tbcacademy.ge/usaid-faq"
+            >ყველა კითხვა</a
+          >
+
           <ul class="question-list">
             <li
               class="question-item"
@@ -468,6 +467,7 @@
     <footer class="footer">
       <div class="container footer-container">
         <img
+          class="footer-tbc-logo"
           src="./img/logos/tbc-logo.webp"
           alt="tbc logo"
         />
